--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
-  "name": "otp-input",
-  "version": "0.1.0",
+  "name": "react-otpcode-input",
+  "version": "0.1.13",
   "description": "OTP Input Component",
   "main": "index.js",
   "scripts": {
-    "test": "jest"
+    "test": "jest",
+    "build": "./node_modules/.bin/babel lib --out-file index.js"
   },
   "repository": {
     "type": "git",
@@ -19,12 +20,18 @@
     "url": "https://github.com/omegaspn/otp-input/issues"
   },
   "homepage": "https://github.com/omegaspn/otp-input#readme",
-  "dependencies": {},
+  "dependencies": {
+    "@types/node": "^13.7.4"
+  },
   "peerDependencies": {
     "react": "^16.2.0",
     "react-dom": "^16.2.0"
   },
   "devDependencies": {
+    "@babel/cli": "^7.8.4",
+    "@babel/core": "^7.8.4",
+    "@babel/preset-env": "^7.8.4",
+    "@babel/preset-react": "^7.8.3",
     "jest": "^24.9.0"
   }
 }
