--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-otpcode-input",
-  "version": "0.1.43",
+  "version": "0.1.45",
   "description": "OTP Input Component",
   "main": "index.js",
   "scripts": {
@@ -9,7 +9,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/omegaspn/otp-input.git"
+    "url": "git+https://github.com/omegaspn/react-otpcode-input.git"
   },
   "keywords": [
     "otp"
@@ -17,9 +17,9 @@
   "author": "Supanat Wongchai",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/omegaspn/otp-input/issues"
+    "url": "https://github.com/omegaspn/react-otpcode-input/issues"
   },
-  "homepage": "https://github.com/omegaspn/otp-input#readme",
+  "homepage": "https://github.com/omegaspn/react-otpcode-input#readme",
   "dependencies": {
     "@types/node": "^13.7.4",
     "rebass": "^4.0.7",
