--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "react-otpcode-input",
-  "version": "0.2.9",
+  "version": "0.2.11",
   "description": "OTP Input Component",
   "main": "index.js",
   "scripts": {
     "test": "jest",
-    "build": "./node_modules/.bin/babel lib --out-file index.js"
+    "build": "./node_modules/.bin/babel src --out-file lib/index.js"
   },
   "repository": {
     "type": "git",
