--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "react-otpcode-input",
-  "version": "0.2.11",
+  "version": "0.2.14",
   "description": "OTP Input Component",
-  "main": "index.js",
+  "main": "lib/index.js",
   "scripts": {
     "test": "jest",
     "build": "./node_modules/.bin/babel src --out-file lib/index.js"
@@ -16,6 +16,7 @@
   ],
   "author": "Supanat Wongchai",
   "license": "MIT",
+  "types": "typings/index.d.ts",
   "bugs": {
     "url": "https://github.com/omegaspn/react-otpcode-input/issues"
   },
