--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "OTP Input Component",
   "main": "lib/index.js",
   "scripts": {
-    "test": "jest",
+    "test": "NODE_ICU_DATA=node_modules/full-icu react-scripts test --env=jsdom",
     "build": "./node_modules/.bin/babel src --out-file lib/index.js"
   },
   "repository": {
@@ -22,6 +22,8 @@
   },
   "homepage": "https://github.com/omegaspn/react-otpcode-input#readme",
   "dependencies": {
+    "react": "^16.13.0",
+    "react-dom": "^16.13.0",
     "styled-components": "^5.0.1"
   },
   "peerDependencies": {
@@ -33,6 +35,8 @@
     "@babel/core": "^7.8.4",
     "@babel/preset-env": "^7.8.4",
     "@babel/preset-react": "^7.8.3",
-    "jest": "^24.9.0"
+    "@testing-library/react": "^9.5.0",
+    "enzyme": "^3.11.0",
+    "react-scripts": "^3.4.0"
   }
 }
