--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-otpcode-input",
-  "version": "0.2.14",
+  "version": "1.0.0",
   "description": "OTP Input Component",
   "main": "lib/index.js",
   "scripts": {
@@ -35,6 +35,7 @@
     "@babel/core": "^7.8.4",
     "@babel/preset-env": "^7.8.4",
     "@babel/preset-react": "^7.8.3",
+    "@testing-library/jest-dom": "^5.1.1",
     "@testing-library/react": "^9.5.0",
     "enzyme": "^3.11.0",
     "react-scripts": "^3.4.0"
