--- a/package.json
+++ b/package.json
@@ -1,11 +1,16 @@
 {
   "name": "react-otpcode-input",
-  "version": "1.0.4",
+  "version": "1.0.5",
   "description": "OTP Input Component",
   "main": "lib/index.js",
   "scripts": {
     "test": "NODE_ICU_DATA=node_modules/full-icu react-scripts test --env=jsdom",
     "build": "./node_modules/.bin/babel src/otp --out-file lib/index.js"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "npm test"
+    }
   },
   "repository": {
     "type": "git",
@@ -35,6 +40,7 @@
     "@babel/preset-react": "^7.8.3",
     "@testing-library/jest-dom": "^5.1.1",
     "@testing-library/react": "^9.5.0",
+    "husky": "^4.2.3",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
     "react-scripts": "^3.4.0"
