--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@testing-library/jest-dom": "^5.1.1",
     "@testing-library/react": "^9.5.0",
     "husky": "^3.1.0",
+    "jest-styled-components": "^7.0.3",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
     "react-scripts": "^3.4.0"
