--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-otpcode-input",
-  "version": "1.1.2",
+  "version": "1.1.3",
   "description": "OTP Input Component",
   "main": "lib/index.js",
   "scripts": {
@@ -29,23 +29,23 @@
   },
   "homepage": "https://github.com/omegaspn/react-otpcode-input#readme",
   "dependencies": {
-    "styled-components": "^5.0.1"
+    "styled-components": "5.0.1"
   },
   "peerDependencies": {
-    "react": "^16.2.0",
-    "react-dom": "^16.2.0"
+    "react": "16.2.0",
+    "react-dom": "16.2.0"
   },
   "devDependencies": {
-    "@babel/cli": "^7.8.4",
-    "@babel/core": "^7.8.4",
-    "@babel/preset-env": "^7.8.4",
-    "@babel/preset-react": "^7.8.3",
-    "@testing-library/jest-dom": "^5.1.1",
-    "@testing-library/react": "^9.5.0",
-    "husky": "^3.1.0",
-    "jest-styled-components": "^7.0.3",
-    "react": "^16.13.0",
-    "react-dom": "^16.13.0",
-    "react-scripts": "^3.4.0"
+    "@babel/cli": "7.8.4",
+    "@babel/core": "7.8.4",
+    "@babel/preset-env": "7.8.4",
+    "@babel/preset-react": "7.8.3",
+    "@testing-library/jest-dom": "5.1.1",
+    "@testing-library/react": "9.5.0",
+    "husky": "3.1.0",
+    "jest-styled-components": "7.0.3",
+    "react": "16.13.0",
+    "react-dom": "16.13.0",
+    "react-scripts": "3.4.0"
   }
 }
