--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-otpcode-input",
-  "version": "1.1.4",
+  "version": "1.1.5",
   "description": "OTP Input Component",
   "main": "lib/index.js",
   "scripts": {
@@ -28,7 +28,9 @@
     "url": "https://github.com/omegaspn/react-otpcode-input/issues"
   },
   "homepage": "https://github.com/omegaspn/react-otpcode-input#readme",
-  "dependencies": {},
+  "dependencies": {
+    "react-jss": "10.6.0"
+  },
   "peerDependencies": {
     "react": "16.2.0",
     "react-dom": "16.2.0"
